# Phantom

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: structure.norg
src/: buffer.rs  cmd.rs  command.rs  document.rs  editor.rs  input.rs  keybind.rs  lib.rs  log.rs  main.rs  phantom.rs  screen.rs  terminal.rs
src/input/: command.rs  keybind.rs
src/screen/: draw.rs  pane.rs  status.rs  workspace.rs
