[package]
name = "phantom-editor"
version = "0.1.0"
edition = "2021"
authors = ["Shadorain"]
repository = "https://github.com/Shadorain/Phantom"
description = "** A simple yet complex, shadow fast, rust text editor, to run in the shadows **"
readme = "README.md"
license = "GPL-3.0"
keywords = ["text_editor", "vim-like", "phantom", "movement", "config"]
categories = ["command-line-utilities", "command-line-interface", "text-editors"]

[lib]
name = "phantom"
path = "src/lib.rs"

[[bin]]
name = "phantom"
path = "src/main.rs"

[dependencies]
# Utility
thiserror = "1.0"

# Terminal Interface
crossterm = "0.25.0"

# Buffer
ropey = "1.5"
